@@ -1,0 +1,1 @@
+#include "../taglib/mp4/mp4coverart.h"
