@@ -111,6 +111,7 @@ mp4/mp4atom.cpp
 mp4/mp4tag.cpp
 mp4/mp4item.cpp
 mp4/mp4properties.cpp
+mp4/mp4coverart.cpp
 )
 ELSE(WITH_MP4)
 SET(mp4_SRCS)
@@ -200,6 +201,7 @@ SET_TARGET_PROPERTIES(tag PROPERTIES
         SOVERSION ${TAGLIB_LIB_MAJOR_VERSION}
         INSTALL_NAME_DIR ${LIB_INSTALL_DIR}
         DEFINE_SYMBOL MAKE_TAGLIB_LIB
+        LINK_INTERFACE_LIBRARIES ""
 )
 INSTALL(TARGETS tag
 	LIBRARY DESTINATION ${LIB_INSTALL_DIR}
