@@ -1,5 +1,5 @@
 /**************************************************************************
-    copyright            : (C) 2007 by Lukáš Lalinský
+    copyright            : (C) 2009 by Lukáš Lalinský
     email                : lalinsky@gmail.com
  **************************************************************************/
 
@@ -31,38 +31,33 @@
 
 #include <taglib.h>
 #include <tdebug.h>
-#include "mp4item.h"
+#include "mp4coverart.h"
 
 using namespace TagLib;
 
-class MP4::Item::ItemPrivate : public RefCounter
+class MP4::CoverArt::CoverArtPrivate : public RefCounter
 {
 public:
-  ItemPrivate() : RefCounter(), valid(true) {}
+  CoverArtPrivate() : RefCounter(), format(MP4::CoverArt::JPEG) {}
 
-  bool valid;
-  union {
-    bool m_bool;
-    int m_int;
-    IntPair m_intPair;
-  };
-  StringList m_stringList;
-  MP4::CoverArtList m_coverArtList;
+  Format format;
+  ByteVector data;
 };
 
-MP4::Item::Item()
+MP4::CoverArt::CoverArt(Format format, const ByteVector &data)
 {
-  d = new ItemPrivate;
-  d->valid = false;
+  d = new CoverArtPrivate;
+  d->format = format;
+  d->data = data;
 }
 
-MP4::Item::Item(const Item &item) : d(item.d)
+MP4::CoverArt::CoverArt(const CoverArt &item) : d(item.d)
 {
   d->ref();
 }
 
-MP4::Item &
-MP4::Item::operator=(const Item &item)
+MP4::CoverArt &
+MP4::CoverArt::operator=(const CoverArt &item)
 {
   if(d->deref()) {
     delete d;
@@ -72,78 +67,23 @@ MP4::Item::operator=(const Item &item)
   return *this;
 }
 
-MP4::Item::~Item()
+MP4::CoverArt::~CoverArt()
 {
   if(d->deref()) {
     delete d;
   }
 }
 
-MP4::Item::Item(bool value)
+MP4::CoverArt::Format
+MP4::CoverArt::format() const
 {
-  d = new ItemPrivate;
-  d->m_bool = value;
+  return d->format;
 }
 
-MP4::Item::Item(int value)
+ByteVector
+MP4::CoverArt::data() const
 {
-  d = new ItemPrivate;
-  d->m_int = value;
-}
-
-MP4::Item::Item(int value1, int value2)
-{
-  d = new ItemPrivate;
-  d->m_intPair.first = value1;
-  d->m_intPair.second = value2;
-}
-
-MP4::Item::Item(const StringList &value)
-{
-  d = new ItemPrivate;
-  d->m_stringList = value;
-}
-
-MP4::Item::Item(const MP4::CoverArtList &value)
-{
-  d = new ItemPrivate;
-  d->m_coverArtList = value;
-}
-
-bool
-MP4::Item::toBool() const
-{
-  return d->m_bool;
-}
-
-int
-MP4::Item::toInt() const
-{
-  return d->m_int;
-}
-
-MP4::Item::IntPair
-MP4::Item::toIntPair() const
-{
-  return d->m_intPair;
-}
-
-StringList
-MP4::Item::toStringList() const
-{
-  return d->m_stringList;
-}
-
-MP4::CoverArtList
-MP4::Item::toCoverArtList() const
-{
-  return d->m_coverArtList;
-}
-
-bool
-MP4::Item::isValid() const
-{
-  return d->valid;
+  return d->data;
 }
 
 #endif
